# goboVkTriangle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/public/include/gobovktriangle/: gobovktriangle.h
code/src/: gobovktriangle.cpp  triangle1.vert  vert.spv
code/test/: CMakeLists.txt
resources/configs/: pre-commit
resources/scripts/: defaultBaseEnvironment.sh  defaultInitProject.sh
